# OpenStore

./: API文档.md  MULTI_PLATFORM_FORMAT.md  README.md  app-source.json  fix-build.md  index.html  multi-platform-app-source.json  package-lock.json  package.json  server-example.js  test-connection.html  test-macos-fix.html  test-unsupported-app-source.json  vite.config.js  直接下载功能说明.md
.github/workflows/: README.md  build.yml  quick-build.yml
Web/: index.html
docs/: CNAME  OpenStore · YMCL.html  SEO-optimization-report.md  browserconfig.xml  iconfont.json  index.html  message-center-usage.md  robots.txt  script.js  sitemap.xml
docs/download/: index.html
docs/license/: index.html
gateway/: README.md  package-lock.json  package.json  test-yaml2.js  test.ts  tsconfig.json
gateway/src/: index.ts  types.ts
public/: index.html
src/: App.css  App.jsx  App.tsx  i18n.js  index.css  index.js  index.jsx  main.jsx  theme-transitions.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs  multi_thread_downloader.rs
src/components/: AppCard.jsx  AppDetails.jsx  AppGrid.jsx  AppIcon.tsx  AppStore.jsx  ConfirmDialog.jsx  DownloadButton.jsx  DownloadDemo.jsx  DownloadManager.jsx  DownloadPage.jsx  DownloadProgress.jsx  ErrorBoundary.jsx  Extensions.jsx  FeaturedApps.jsx  Header.jsx  JsonEditor.jsx  Messages.jsx  NativeDownloadManager.jsx  Navigation.jsx  NotificationSystem.jsx  PlatformDownloadSelector.jsx  PromptDialog.jsx  Settings.jsx  Sidebar.jsx  (+7 more)
winget_openstore/: adapter.js  source.json
(+40 files in other folders)
