[package]
name = "openstore"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "openstore_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
tauri-plugin-sql = "2"
tauri-plugin-dialog = "2"
futures-util = "0.3"
tokio = { version = "1", features = ["sync"] }
winreg = "0.52"
png = "0.17"
base64 = "0.22"
windows = { version = "0.58.0", features = ["Win32_Graphics_Gdi", "Win32_Storage_FileSystem", "Win32_System_Com", "Win32_System_Environment", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

